# flake8-wagtail-no-serve

./: .gitignore  LICENSE.txt  README.md  flake8_wagtail_no_serve.py  setup.cfg  tox.ini
.github/workflows/: main.yml
tests/: flake8_wagtail_no_serve_test.py
tests/fixtures/: invalid.py  invalid_page_indirect.py  valid.py  valid_non_page.py  valid_non_page_func.py
