[metadata]
name = flake8_wagtail_no_serve
version = 0.1.0
description = Flake8 plugin that enforces not creating custom serve methods in inheritors from Wagtail's Page model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/octavenz/flake8-wagtail-no-serve
author = Richard Campen
author_email = richard@campen.co
license = BSD-3-Clause
license_file = LICENSE.txt
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Wagtail
    Framework :: Wagtail :: 2
    Framework :: Wagtail :: 3
    Framework :: Wagtail :: 4
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Site Management

[options]
py_modules = flake8_wagtail_no_serve
install_requires =
    flake8>=3.7
    importlib-metadata>=0.9;python_version<"3.8"
python_requires = >=3.7

[options.entry_points]
flake8.extension =
    WNS=flake8_wagtail_no_serve:Plugin

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
